# emvault-elements

./: Cargo.toml  README.md
src/: confidential.rs  descriptor.rs  error.rs  federated_wallet.rs  lib.rs  network.rs  pset.rs  rpc.rs  signer.rs  spend.rs  testkit.rs  wollet.rs
src/sync/: fakes.rs  mod.rs  scan.rs  tests.rs
